--- a/styles/css/banner-pp.css
+++ b/styles/css/banner-pp.css
@@ -1,96 +1,84 @@
 @font-face {
-  font-family: 'FSMeP';
+  font-family: "FSMeP";
   font-weight: 300;
   font-style: normal;
   src: url("../../fonts/fsme/FSMe-P-Light.otf") format("opentype"); }
+
 @font-face {
-  font-family: 'FSMeP';
+  font-family: "FSMeP";
   font-weight: 400;
   font-style: normal;
   src: url("../../fonts/fsme/FSMe-P.otf") format("opentype"); }
+
 @font-face {
-  font-family: 'FSMeP';
+  font-family: "FSMeP";
   font-weight: 700;
   font-style: normal;
   src: url("../../fonts/fsme/FSMe-P-Bold.otf") format("opentype"); }
+
 @font-face {
-  font-family: 'FSMeP';
+  font-family: "FSMeP";
   font-weight: 800;
   font-style: normal;
   src: url("../../fonts/fsme/FSMe-P-Black.otf") format("opentype"); }
+
 @font-face {
-  font-family: 'Muli';
+  font-family: "Muli";
   font-weight: 300;
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-light.ttf") format("truetype"); }
+
 @font-face {
-  font-family: 'Muli';
+  font-family: "Muli";
   font-weight: 400;
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-regular.ttf") format("truetype"); }
+
 @font-face {
-  font-family: 'Muli';
+  font-family: "Muli";
   font-weight: 600;
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-semibold.ttf") format("truetype"); }
+
 @font-face {
-  font-family: 'Muli';
+  font-family: "Muli";
   font-weight: 700;
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-bold.ttf") format("truetype"); }
+
 @font-face {
-  font-family: 'Muli';
+  font-family: "Muli";
   font-weight: 800;
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-black.ttf") format("truetype"); }
+
 body {
   width: 100%;
   height: 100vh;
   margin: 0;
   padding: 0;
   background: lightcoral;
-  font-family: 'FSMeP', Verdana, sans-serif; }
+  font-family: "FSMeP", Verdana, sans-serif; }
 
 span.avoidwrap {
   display: inline-block; }
+
 span.semibold {
   font-weight: 700; }
+
 span.bold {
   font-weight: 800; }
+
 span.smallSpace {
   letter-spacing: -0.1em; }
 
 .gotIt-button {
   left: 8px; }
-
-.announcementBanner button {
-  position: absolute;
-  border-radius: 16px;
-  border: none;
-  padding: 1px 12px 0;
-  background: #d1d8e6;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 0.6em;
-  font-family: 'FSMeP';
-  font-weight: 700;
-  color: #14121a;
-  cursor: pointer;
-  height: 28px;
-  bottom: 6px; }
-  .announcementBanner button.gotIt-button {
-    left: calc(0% + 6px);
-    transition: all 0.8s; }
-  .announcementBanner button.showHide {
-    right: calc(0% + 6px);
-    transition: all 0.8s;
-    background: #d0d8e5 url(../../images/announcement.svg) 280px 50% no-repeat; }
 
 .hidden .announcementBanner {
   background: #cdd5e4; }
@@ -112,10 +100,8 @@ span.smallSpace {
     opacity: 0; }
 
 .announcementBanner {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
+  display: grid;
+  grid-template: auto / auto 257px;
   text-align: left;
   background: #ebeef3;
   font-weight: 300;
@@ -129,41 +115,77 @@ span.smallSpace {
     font-weight: 800;
     color: #3f3c4f; }
   .announcementBanner .bannerImage {
-    height: 110px;
-    margin: -4px 0 24px 8px;
+    height: 253px;
+    position: relative;
     transition: opacity 0.6s;
     display: flex;
     flex-direction: column;
     align-items: center; }
     .announcementBanner .bannerImage img {
-      height: 110%;
-      width: auto; }
+      height: 100%;
+      width: auto;
+      margin-right: -1px; }
   .announcementBanner .titlesAndButtons {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
     justify-content: center; }
   .announcementBanner .titles {
+    text-align: left;
+    padding: 0 42px 32px 32px;
     box-sizing: border-box;
     line-height: 1.15em;
-    text-align: center;
     font-weight: 600;
-    color: #3f3c4f; }
+    color: #3f3c4f;
+    max-width: 468px; }
     .announcementBanner .titles strong {
-      font-weight: 700; }
+      font-weight: 800; }
   .announcementBanner .mainTitle {
-    line-height: 1.1em;
-    padding: 0px 0 0.3em;
-    font-size: 1.225em;
-    font-weight: 700;
+    font-size: 0.8em;
+    line-height: 1em;
+    letter-spacing: -0.02em;
+    text-transform: uppercase;
+    padding: 0px 0 0.8em;
+    font-weight: 800;
     color: #e84e0f; }
   .announcementBanner .surOrSubTitle {
-    font-size: 70%;
-    line-height: 1.25em;
-    font-weight: 600;
-    max-width: 582px; }
+    font-size: 96%;
+    padding-bottom: 0.6em;
+    font-weight: 400;
+    line-height: 1.1em;
+    letter-spacing: -0.02em; }
+    .announcementBanner .surOrSubTitle.smaller {
+      font-size: 62%;
+      letter-spacing: unset; }
     .announcementBanner .surOrSubTitle .standOut {
       font-weight: 600; }
+  .announcementBanner .linkContainer {
+    font-size: 64%; }
+    .announcementBanner .linkContainer span {
+      margin: 0 0.2em;
+      font-size: 86%; }
+  .announcementBanner button {
+    position: absolute;
+    border-radius: 16px;
+    border: none;
+    padding: 1px 12px 0;
+    background: #cad2e2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.6em;
+    font-family: "FSMeP";
+    color: #14121a;
+    cursor: pointer;
+    height: 24px;
+    bottom: 6px; }
+    .announcementBanner button.gotIt-button {
+      left: calc(0% + 6px);
+      transition: all 0.8s; }
+    .announcementBanner button.showHide {
+      right: 262px;
+      transition: all 0.8s;
+      background: #cad2e2 url(../../images/announcement.svg) 280px 50% no-repeat; }
 
 .displayIsNone {
   display: none !important; }
@@ -236,6 +258,7 @@ span.smallSpace {
   .logged-in .for-LoginPage .button-text {
     margin-bottom: 6px;
     padding: 5px 14px 6px; }
+
 .logged-in .announcementBanner span.button-text {
   border-bottom: 2px dotted rgba(255, 255, 255, 0.5);
   cursor: pointer; }
@@ -247,11 +270,9 @@ span.smallSpace {
 @media screen and (max-width: 767px) and (orientation: portrait) {
   .shyBreak {
     display: block; }
-
   .bannerInnerBox {
     width: 100vw;
     display: flex; }
-
   .announcementBanner {
     height: 100%;
     width: 100vw;
@@ -299,7 +320,6 @@ span.smallSpace {
       padding: 5px 14px 6px; }
     .announcementBanner.atvWelcome .bannerRight .titlesAndButtons {
       padding: 10px 10px 150px 10px; }
-
   .continueBtn {
     display: inline-block; }
     .continueBtn p {
@@ -308,7 +328,6 @@ span.smallSpace {
       padding: 0;
       font-weight: 600;
       letter-spacing: -0.02em; }
-
   .dotContainer {
     bottom: 70px;
     flex-direction: row;
@@ -319,7 +338,6 @@ span.smallSpace {
     .dotContainer .dot.active {
       width: 14px;
       height: 14px; }
-
   .playPause {
     right: unset;
     bottom: 75px;
@@ -327,37 +345,36 @@ span.smallSpace {
     left: 50vw;
     transform: translateX(-50%);
     margin: 0 0 0 1px; }
-
   .logged-out .for-Mobile {
     display: inline !important; }
-
   .logged-out .for-Desktop,
   .logged-in .for-Desktop {
     display: none !important; }
-
   span.keepOnOneLine {
     display: block; }
-
   .messageBox {
     padding: 25px 30px 60px 30px; }
-
   .mainTitle {
     font-size: 26px; }
-
   .bannerText {
     font-size: 15px; } }
-@media screen and (max-width: 540px) {
-  .announcementBanner .titles {
-    padding: 0 12px; }
-  .announcementBanner .mainTitle {
-    font-size: 1.1em;
-    padding: 0px 0.6em 0.6em; }
-  .announcementBanner .surOrSubTitle {
-    font-size: 62%;
-    line-height: 1.15em;
-    padding: 0 12px; }
-  .announcementBanner .bannerImage {
-    height: 80px;
-    margin-bottom: 40px; } }
 
-/*# sourceMappingURL=banner-pp.css.map */
+@media screen and (max-width: 680px) {
+  .announcementBanner {
+    grid-template: auto / auto; }
+    .announcementBanner .bannerImage {
+      display: none; }
+    .announcementBanner button.showHide {
+      right: 6px; }
+    .announcementBanner .titles {
+      padding: 0 12px 32px 20px; } }
+
+@media screen and (max-width: 420px) {
+  .announcementBanner .mainTitle {
+    font-size: 0.65em; }
+  .announcementBanner .surOrSubTitle {
+    font-size: 85%; }
+  .announcementBanner .surOrSubTitle.smaller {
+    font-size: 55%; }
+  .announcementBanner .linkContainer {
+    font-size: 55%; } }
