--- a/styles/scss/banner-pp.scss
+++ b/styles/scss/banner-pp.scss
@@ -216,6 +216,11 @@ span {
     padding: 0px 0 0.8em;
     font-weight: 700;
     color: #e84e0f;
+
+    em {
+      font-style: normal;
+      text-decoration: underline;
+    }
   }
 
   .surOrSubTitle {
