--- a/styles/scss/banner-pp.scss
+++ b/styles/scss/banner-pp.scss
@@ -1,66 +1,66 @@
 @font-face {
-  font-family: "FSMeP";
+  font-family: 'FSMeP';
   font-weight: 300;
   font-style: normal;
-  src: url("../../fonts/fsme/FSMe-P-Light.otf") format("opentype");
+  src: url('../../fonts/fsme/FSMe-P-Light.otf') format('opentype');
 }
 @font-face {
-  font-family: "FSMeP";
+  font-family: 'FSMeP';
   font-weight: 400;
   font-style: normal;
-  src: url("../../fonts/fsme/FSMe-P.otf") format("opentype");
+  src: url('../../fonts/fsme/FSMe-P.otf') format('opentype');
 }
 @font-face {
-  font-family: "FSMeP";
+  font-family: 'FSMeP';
   font-weight: 700;
   font-style: normal;
-  src: url("../../fonts/fsme/FSMe-P-Bold.otf") format("opentype");
+  src: url('../../fonts/fsme/FSMe-P-Bold.otf') format('opentype');
 }
 @font-face {
-  font-family: "FSMeP";
+  font-family: 'FSMeP';
   font-weight: 800;
   font-style: normal;
-  src: url("../../fonts/fsme/FSMe-P-Black.otf") format("opentype");
+  src: url('../../fonts/fsme/FSMe-P-Black.otf') format('opentype');
 }
 
 @font-face {
-  font-family: "Muli";
+  font-family: 'Muli';
   font-weight: 300;
   font-style: normal;
   font-display: fallback;
-  src: url("../../fonts/muli/muli-light.ttf") format("truetype");
+  src: url('../../fonts/muli/muli-light.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Muli";
+  font-family: 'Muli';
   font-weight: 400;
   font-style: normal;
   font-display: fallback;
-  src: url("../../fonts/muli/muli-regular.ttf") format("truetype");
+  src: url('../../fonts/muli/muli-regular.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Muli";
+  font-family: 'Muli';
   font-weight: 600;
   font-style: normal;
   font-display: fallback;
-  src: url("../../fonts/muli/muli-semibold.ttf") format("truetype");
+  src: url('../../fonts/muli/muli-semibold.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Muli";
+  font-family: 'Muli';
   font-weight: 700;
   font-style: normal;
   font-display: fallback;
-  src: url("../../fonts/muli/muli-bold.ttf") format("truetype");
+  src: url('../../fonts/muli/muli-bold.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Muli";
+  font-family: 'Muli';
   font-weight: 800;
   font-style: normal;
   font-display: fallback;
-  src: url("../../fonts/muli/muli-black.ttf") format("truetype");
+  src: url('../../fonts/muli/muli-black.ttf') format('truetype');
 }
 
 body {
@@ -69,7 +69,7 @@ body {
   margin: 0;
   padding: 0;
   background: lightcoral;
-  font-family: "FSMeP", Verdana, sans-serif;
+  font-family: 'FSMeP', Verdana, sans-serif;
 }
 
 span {
@@ -109,7 +109,7 @@ span {
       width: 76px;
       height: 32px;
       background-color: #ccd5e3;
-      background-position-x: 50%;
+      background-position: 50% 5px;
 
       p {
         opacity: 0;
@@ -222,7 +222,7 @@ span {
     justify-content: center;
     align-items: center;
     font-size: 0.6em;
-    font-family: "FSMeP";
+    font-family: 'FSMeP';
     color: #14121a;
     cursor: pointer;
     height: 24px;
@@ -535,5 +535,14 @@ span {
     .linkContainer {
       font-size: 55%;
     }
+  }
+}
+
+/// RULES FOR HEIGHT + WIDTH
+
+@media screen and (max-height: 39px) {
+  .hidden .announcementBanner button.showHide {
+    height: 32px;
+    background-position: 50% 50%;
   }
 }
