--- a/styles/scss/banner-pp.scss
+++ b/styles/scss/banner-pp.scss
@@ -103,7 +103,8 @@ span {
     }
 
     button.showHide {
-      right: calc(50% - 0px);
+      background-position: 50% 0px;
+      right: 50%;
       bottom: 0px;
       border-radius: 0;
       cursor: pointer;
@@ -131,7 +132,7 @@ span {
 
 .announcementBanner {
   display: grid;
-  grid-template: auto / auto 257px;
+  grid-template: auto / auto 220px;
   text-align: left;
   background: #ebeef3;
   font-weight: 300;
@@ -172,12 +173,9 @@ span {
 
   .titles {
     text-align: left;
-    padding: 0 28px 8px 28px;
+    padding: 0 44px 28px 42px;
     box-sizing: border-box;
-    line-height: 1.15em;
-    font-weight: 600;
     color: #3f3c4f;
-    max-width: 468px;
 
     strong {
       font-weight: 800;
@@ -185,17 +183,17 @@ span {
   }
 
   .mainTitle {
-    font-size: 0.7em;
-    line-height: 1em;
+    font-size: 0.9em;
+    line-height: 1.1em;
     letter-spacing: -0.02em;
     text-transform: uppercase;
-    padding: 0px 0 0.8em;
+    padding: 0px 0 0.7em;
     font-weight: 800;
-    color: #e84e0f;
+    color: #6a961a;
   }
 
   .surOrSubTitle {
-    font-size: 96%;
+    font-size: 100%;
     padding-bottom: 0.6em;
     font-weight: 400;
     line-height: 1.1em;
@@ -212,12 +210,7 @@ span {
   }
 
   .linkContainer {
-    font-size: 64%;
-
-    span {
-      margin: 0 0.2em;
-      font-size: 86%;
-    }
+    font-size: 56%;
   }
 
   button {
@@ -242,7 +235,8 @@ span {
     }
 
     &.showHide {
-      right: 262px;
+      right: 0;
+      transform: translate(-226px, 0);
       transition: all 0.8s;
       background: #cad2e2 url(../../images/announcement.svg) 280px 50% no-repeat;
     }
@@ -517,7 +511,7 @@ span {
     }
 
     button.showHide {
-      right: 6px;
+      transform: translate(-6px, 0);
     }
 
     .titles {
