--- a/styles/css/banner-pp.css
+++ b/styles/css/banner-pp.css
@@ -1,375 +1,1 @@
-@font-face {
-  font-family: "FSMeP";
-  font-weight: 300;
-  font-style: normal;
-  src: url("../../fonts/fsme/FSMe-P-Light.otf") format("opentype"); }
-
-@font-face {
-  font-family: "FSMeP";
-  font-weight: 400;
-  font-style: normal;
-  src: url("../../fonts/fsme/FSMe-P.otf") format("opentype"); }
-
-@font-face {
-  font-family: "FSMeP";
-  font-weight: 700;
-  font-style: normal;
-  src: url("../../fonts/fsme/FSMe-P-Bold.otf") format("opentype"); }
-
-@font-face {
-  font-family: "FSMeP";
-  font-weight: 800;
-  font-style: normal;
-  src: url("../../fonts/fsme/FSMe-P-Black.otf") format("opentype"); }
-
-@font-face {
-  font-family: "Muli";
-  font-weight: 300;
-  font-style: normal;
-  font-display: fallback;
-  src: url("../../fonts/muli/muli-light.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Muli";
-  font-weight: 400;
-  font-style: normal;
-  font-display: fallback;
-  src: url("../../fonts/muli/muli-regular.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Muli";
-  font-weight: 600;
-  font-style: normal;
-  font-display: fallback;
-  src: url("../../fonts/muli/muli-semibold.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Muli";
-  font-weight: 700;
-  font-style: normal;
-  font-display: fallback;
-  src: url("../../fonts/muli/muli-bold.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Muli";
-  font-weight: 800;
-  font-style: normal;
-  font-display: fallback;
-  src: url("../../fonts/muli/muli-black.ttf") format("truetype"); }
-
-body {
-  width: 100%;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-  background: lightcoral;
-  font-family: "FSMeP", Verdana, sans-serif; }
-
-span.avoidwrap {
-  display: inline-block; }
-
-span.semibold {
-  font-weight: 700; }
-
-span.bold {
-  font-weight: 800; }
-
-span.smallSpace {
-  letter-spacing: -0.1em; }
-
-.gotIt-button {
-  left: 8px; }
-
-.announcementBanner button {
-  position: absolute;
-  border-radius: 16px;
-  border: none;
-  padding: 1px 12px 0;
-  background: #d1d8e6;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 0.6em;
-  font-family: "FSMeP";
-  font-weight: 700;
-  color: #14121a;
-  cursor: pointer;
-  height: 28px;
-  bottom: 6px; }
-  .announcementBanner button.gotIt-button {
-    left: calc(0% + 6px);
-    transition: all 0.8s; }
-  .announcementBanner button.showHide {
-    right: calc(0% + 6px);
-    transition: all 0.8s;
-    background: #d0d8e5 url(../../images/announcement.svg) 280px 50% no-repeat; }
-
-.hidden .announcementBanner {
-  background: #cdd5e4; }
-  .hidden .announcementBanner button.showHide {
-    width: 35px;
-    height: 36px;
-    right: calc(50% - 0px);
-    bottom: 0px;
-    border-radius: 0;
-    cursor: pointer;
-    transform: translate(50%, 0px);
-    width: 76px;
-    height: 32px;
-    background-color: #ccd5e3;
-    background-position-x: 50%; }
-    .hidden .announcementBanner button.showHide p {
-      opacity: 0; }
-  .hidden .announcementBanner .bannerImage {
-    opacity: 0; }
-
-.announcementBanner {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  text-align: left;
-  background: #ebeef3;
-  font-weight: 300;
-  padding: 0;
-  height: 100%;
-  position: relative;
-  font-size: 21px;
-  overflow: hidden;
-  transition: background-color 0.8s; }
-  .announcementBanner a {
-    font-weight: 800;
-    color: #3f3c4f; }
-  .announcementBanner .bannerImage {
-    margin: 10px 0 -16px 28px;
-    height: auto;
-    transition: opacity 0.6s;
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-    .announcementBanner .bannerImage img {
-      height: 132px;
-      width: auto; }
-  .announcementBanner .titlesAndButtons {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    justify-content: center; }
-  .announcementBanner .titles {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0 32px;
-    box-sizing: border-box;
-    line-height: 1.15em;
-    text-align: center;
-    font-weight: 600;
-    color: #3f3c4f; }
-    .announcementBanner .titles strong {
-      font-weight: 700; }
-  .announcementBanner .mainTitle {
-    line-height: 1.15em;
-    font-size: 0.9em;
-    padding: 0px 0 0.8em;
-    font-weight: 700;
-    color: #e84e0f; }
-    .announcementBanner .mainTitle em {
-      font-style: normal;
-      text-decoration: underline; }
-  .announcementBanner .surOrSubTitle {
-    line-height: 1.25em;
-    font-weight: 400;
-    font-size: 0.65em;
-    max-width: 582px; }
-    .announcementBanner .surOrSubTitle .standOut {
-      font-weight: 600; }
-
-.displayIsNone {
-  display: none !important; }
-
-.dotContainer {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  padding: 2px 0;
-  box-sizing: border-box;
-  height: 100%;
-  justify-content: space-evenly;
-  align-items: center;
-  right: 20px;
-  z-index: 100; }
-  .dotContainer .dot {
-    width: 14px;
-    height: 14px;
-    background: rgba(255, 255, 255, 0);
-    border: 1px solid rgba(255, 255, 255, 0.4);
-    box-sizing: border-box;
-    cursor: pointer;
-    font-size: 0px;
-    color: white; }
-    .dotContainer .dot.active {
-      background: rgba(255, 255, 255, 0.3);
-      border-width: 2px;
-      border: 1px solid rgba(255, 255, 255, 0.5);
-      width: 16px;
-      height: 16px; }
-
-.playPause {
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  z-index: 300;
-  top: 50%;
-  border-radius: 20px;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  transform: translateY(-50%);
-  margin-left: 2vw;
-  cursor: pointer;
-  background-image: url(../../images/play-pause-light.svg);
-  right: 50px;
-  margin-top: 1px;
-  background-position-x: -30px; }
-  .playPause.paused {
-    background-position-x: 0; }
-
-.continueBtn {
-  display: none;
-  bottom: 18%;
-  position: absolute;
-  color: #726a7c;
-  background: white;
-  height: 50px;
-  padding: 0px 18px;
-  border-radius: 25px;
-  left: 50vw;
-  font-size: 16px;
-  font-weight: 600;
-  transform: translate(-50%, 50%);
-  z-index: 10; }
-
-.logged-out .for-TitlesPage {
-  display: none !important; }
-
-.logged-in .for-LoginPage {
-  display: none !important; }
-  .logged-in .for-LoginPage .button-text {
-    margin-bottom: 6px;
-    padding: 5px 14px 6px; }
-
-.logged-in .announcementBanner span.button-text {
-  border-bottom: 2px dotted rgba(255, 255, 255, 0.5);
-  cursor: pointer; }
-
-.logged-out .for-Mobile,
-.logged-in .for-Mobile {
-  display: none !important; }
-
-@media screen and (max-width: 767px) and (orientation: portrait) {
-  .shyBreak {
-    display: block; }
-  .bannerInnerBox {
-    width: 100vw;
-    display: flex; }
-  .announcementBanner {
-    height: 100%;
-    width: 100vw;
-    justify-content: center; }
-    .announcementBanner .mainTitle {
-      font-size: 95%; }
-    .announcementBanner .surOrSubTitle {
-      flex: 1 1 34%;
-      display: flex;
-      flex-direction: column;
-      top: 0;
-      line-height: 1.25em; }
-      .announcementBanner .surOrSubTitle > div {
-        position: relative;
-        top: 20%; }
-      .announcementBanner .surOrSubTitle.spaced > * {
-        margin-bottom: 1.2em;
-        line-height: 1.2em; }
-    .announcementBanner .bannerButton div {
-      font-size: 13px;
-      min-width: 110px;
-      padding: 9px 12px;
-      margin-top: 8px; }
-    .announcementBanner .bannerImage {
-      background-size: 100%;
-      background-position: 50% 100%;
-      height: 52%; }
-    .announcementBanner .noImage.titlesAndButtons .titles {
-      background: none;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around; }
-    .announcementBanner .noImage .surOrSubTitle.small {
-      margin-bottom: 20px; }
-      .announcementBanner .noImage .surOrSubTitle.small:nth-child(2) {
-        margin-top: 20px;
-        margin-bottom: 0; }
-    .announcementBanner .button-text {
-      margin-bottom: 8px;
-      cursor: pointer; }
-    .announcementBanner .shyBreak {
-      display: block; }
-    .announcementBanner #logged-in-text.button-text {
-      margin-bottom: 6px;
-      padding: 5px 14px 6px; }
-    .announcementBanner.atvWelcome .bannerRight .titlesAndButtons {
-      padding: 10px 10px 150px 10px; }
-  .continueBtn {
-    display: inline-block; }
-    .continueBtn p {
-      font-size: 18px;
-      margin: 0;
-      padding: 0;
-      font-weight: 600;
-      letter-spacing: -0.02em; }
-  .dotContainer {
-    bottom: 70px;
-    flex-direction: row;
-    height: 40px;
-    width: 350px;
-    left: 50vw;
-    transform: translateX(-50%); }
-    .dotContainer .dot.active {
-      width: 14px;
-      height: 14px; }
-  .playPause {
-    right: unset;
-    bottom: 75px;
-    top: unset;
-    left: 50vw;
-    transform: translateX(-50%);
-    margin: 0 0 0 1px; }
-  .logged-out .for-Mobile {
-    display: inline !important; }
-  .logged-out .for-Desktop,
-  .logged-in .for-Desktop {
-    display: none !important; }
-  span.keepOnOneLine {
-    display: block; }
-  .messageBox {
-    padding: 25px 30px 60px 30px; }
-  .mainTitle {
-    font-size: 26px; }
-  .bannerText {
-    font-size: 15px; } }
-
-@media screen and (max-width: 640px) {
-  .announcementBanner .titles {
-    padding: 0 16px; }
-  .announcementBanner .mainTitle {
-    font-size: 0.675em;
-    padding: 0px 0 1em; }
-  .announcementBanner .surOrSubTitle {
-    font-size: 0.55em; }
-  .announcementBanner .bannerImage {
-    margin: 4px 0 12px 0; }
-  .announcementBanner .bannerImage img {
-    height: 96px; }
-  .announcementBanner button {
-    font-size: 0.5em;
-    height: 24px; }
-  .announcementBanner span.avoidwrap {
-    display: inline; } }
+@font-face{font-family:"FSMeP";font-weight:300;font-style:normal;src:url("../../fonts/fsme/FSMe-P-Light.otf") format("opentype")}@font-face{font-family:"FSMeP";font-weight:400;font-style:normal;src:url("../../fonts/fsme/FSMe-P.otf") format("opentype")}@font-face{font-family:"FSMeP";font-weight:700;font-style:normal;src:url("../../fonts/fsme/FSMe-P-Bold.otf") format("opentype")}@font-face{font-family:"FSMeP";font-weight:800;font-style:normal;src:url("../../fonts/fsme/FSMe-P-Black.otf") format("opentype")}@font-face{font-family:"Muli";font-weight:300;font-style:normal;font-display:fallback;src:url("../../fonts/muli/muli-light.ttf") format("truetype")}@font-face{font-family:"Muli";font-weight:400;font-style:normal;font-display:fallback;src:url("../../fonts/muli/muli-regular.ttf") format("truetype")}@font-face{font-family:"Muli";font-weight:600;font-style:normal;font-display:fallback;src:url("../../fonts/muli/muli-semibold.ttf") format("truetype")}@font-face{font-family:"Muli";font-weight:700;font-style:normal;font-display:fallback;src:url("../../fonts/muli/muli-bold.ttf") format("truetype")}@font-face{font-family:"Muli";font-weight:800;font-style:normal;font-display:fallback;src:url("../../fonts/muli/muli-black.ttf") format("truetype")}body{width:100%;height:100vh;margin:0;padding:0;background:lightcoral;font-family:"FSMeP", Verdana, sans-serif}span.avoidwrap{display:inline-block}span.semibold{font-weight:700}span.bold{font-weight:800}span.smallSpace{letter-spacing:-0.1em}.gotIt-button{left:8px}.announcementBanner button{position:absolute;border-radius:16px;border:none;padding:1px 12px 0;background:#d1d8e6;display:flex;justify-content:center;align-items:center;font-size:0.6em;font-family:"FSMeP";font-weight:700;color:#14121a;cursor:pointer;height:28px;bottom:6px}.announcementBanner button.gotIt-button{left:calc(0% + 6px);transition:all 0.8s}.announcementBanner button.showHide{right:calc(0% + 6px);transition:all 0.8s;background:#d0d8e5 url(../../images/announcement.svg) 280px 50% no-repeat}.hidden .announcementBanner{background:#cdd5e4}.hidden .announcementBanner button.showHide{width:35px;height:36px;right:calc(50% - 0px);bottom:0px;border-radius:0;cursor:pointer;transform:translate(50%, 0px);width:76px;height:32px;background-color:#ccd5e3;background-position-x:50%}.hidden .announcementBanner button.showHide p{opacity:0}.hidden .announcementBanner .bannerImage{opacity:0}.announcementBanner{display:flex;flex-direction:column;align-items:center;justify-content:flex-end;text-align:left;background:#ebeef3;font-weight:300;padding:0;height:100%;position:relative;font-size:21px;overflow:hidden;transition:background-color 0.8s}.announcementBanner a{font-weight:800;color:#3f3c4f}.announcementBanner .bannerImage{margin:4px 0 -12px 28px;height:auto;transition:opacity 0.6s;display:flex;flex-direction:column;align-items:center}.announcementBanner .bannerImage img{height:132px;width:auto}.announcementBanner .titlesAndButtons{display:flex;flex-direction:column;box-sizing:border-box;justify-content:center}.announcementBanner .titles{display:flex;flex-direction:column;align-items:center;padding:0 32px;box-sizing:border-box;line-height:1.15em;text-align:center;font-weight:600;color:#3f3c4f}.announcementBanner .titles strong{font-weight:700}.announcementBanner .mainTitle{line-height:1.15em;font-size:0.8em;padding:0px 0 0.8em;font-weight:700;color:#e84e0f}.announcementBanner .mainTitle em{font-style:normal;text-decoration:underline}.announcementBanner .surOrSubTitle{line-height:1.25em;font-weight:400;font-size:0.65em;max-width:582px}.announcementBanner .surOrSubTitle .standOut{font-weight:600}.displayIsNone{display:none !important}.dotContainer{position:absolute;display:flex;flex-direction:column;padding:2px 0;box-sizing:border-box;height:100%;justify-content:space-evenly;align-items:center;right:20px;z-index:100}.dotContainer .dot{width:14px;height:14px;background:rgba(255,255,255,0);border:1px solid rgba(255,255,255,0.4);box-sizing:border-box;cursor:pointer;font-size:0px;color:white}.dotContainer .dot.active{background:rgba(255,255,255,0.3);border-width:2px;border:1px solid rgba(255,255,255,0.5);width:16px;height:16px}.playPause{width:30px;height:30px;position:absolute;z-index:300;top:50%;border-radius:20px;border:1px solid rgba(255,255,255,0.5);transform:translateY(-50%);margin-left:2vw;cursor:pointer;background-image:url(../../images/play-pause-light.svg);right:50px;margin-top:1px;background-position-x:-30px}.playPause.paused{background-position-x:0}.continueBtn{display:none;bottom:18%;position:absolute;color:#726a7c;background:white;height:50px;padding:0px 18px;border-radius:25px;left:50vw;font-size:16px;font-weight:600;transform:translate(-50%, 50%);z-index:10}.logged-out .for-TitlesPage{display:none !important}.logged-in .for-LoginPage{display:none !important}.logged-in .for-LoginPage .button-text{margin-bottom:6px;padding:5px 14px 6px}.logged-in .announcementBanner span.button-text{border-bottom:2px dotted rgba(255,255,255,0.5);cursor:pointer}.logged-out .for-Mobile,.logged-in .for-Mobile{display:none !important}@media screen and (max-width: 767px) and (orientation: portrait){.shyBreak{display:block}.bannerInnerBox{width:100vw;display:flex}.announcementBanner{height:100%;width:100vw;justify-content:center}.announcementBanner .mainTitle{font-size:95%}.announcementBanner .surOrSubTitle{flex:1 1 34%;display:flex;flex-direction:column;top:0;line-height:1.25em}.announcementBanner .surOrSubTitle>div{position:relative;top:20%}.announcementBanner .surOrSubTitle.spaced>*{margin-bottom:1.2em;line-height:1.2em}.announcementBanner .bannerButton div{font-size:13px;min-width:110px;padding:9px 12px;margin-top:8px}.announcementBanner .bannerImage{background-size:100%;background-position:50% 100%;height:52%}.announcementBanner .noImage.titlesAndButtons .titles{background:none;display:flex;flex-direction:column;justify-content:space-around}.announcementBanner .noImage .surOrSubTitle.small{margin-bottom:20px}.announcementBanner .noImage .surOrSubTitle.small:nth-child(2){margin-top:20px;margin-bottom:0}.announcementBanner .button-text{margin-bottom:8px;cursor:pointer}.announcementBanner .shyBreak{display:block}.announcementBanner #logged-in-text.button-text{margin-bottom:6px;padding:5px 14px 6px}.announcementBanner.atvWelcome .bannerRight .titlesAndButtons{padding:10px 10px 150px 10px}.continueBtn{display:inline-block}.continueBtn p{font-size:18px;margin:0;padding:0;font-weight:600;letter-spacing:-0.02em}.dotContainer{bottom:70px;flex-direction:row;height:40px;width:350px;left:50vw;transform:translateX(-50%)}.dotContainer .dot.active{width:14px;height:14px}.playPause{right:unset;bottom:75px;top:unset;left:50vw;transform:translateX(-50%);margin:0 0 0 1px}.logged-out .for-Mobile{display:inline !important}.logged-out .for-Desktop,.logged-in .for-Desktop{display:none !important}span.keepOnOneLine{display:block}.messageBox{padding:25px 30px 60px 30px}.mainTitle{font-size:26px}.bannerText{font-size:15px}}@media screen and (max-width: 640px){.announcementBanner .titles{padding:0 16px}.announcementBanner .mainTitle{font-size:0.675em;padding:0px 0 1em}.announcementBanner .surOrSubTitle{font-size:0.55em}.announcementBanner .bannerImage{margin:4px 0 12px 0}.announcementBanner .bannerImage img{height:96px}.announcementBanner button{font-size:0.5em;height:24px}.announcementBanner span.avoidwrap{display:inline}}
